@@ -10,4 +10,6 @@ my $symbol_table = do { no strict; \%{"Devel::NYTProf::Constants::"} };
 
 our @EXPORT_OK = grep { /^NYTP_/ } keys %$symbol_table;
 
+#warn "Constants: ".join(" ", sort @EXPORT_OK);
+
 1;
